<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/superior"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/yellowExito"
        app:layout_constraintBottom_toTopOf="@+id/lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/vegetablesBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/vegetables_background_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background" />

        <ImageView
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vegetablesBackground"
            app:layout_constraintTop_toTopOf="@+id/vegetablesBackground"
            app:srcCompat="@drawable/exito_brand" />

        <ImageView
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/vegetablesBackground"
            app:srcCompat="@drawable/gradient_black_to_transparent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_form_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/superior">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:srcCompat="@drawable/gradient_white_to_transparent" />

        <LinearLayout
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:minHeight="64dp"
                android:text="@string/user_label"
                android:textAlignment="textEnd"
                android:textColor="@color/redExito"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/userField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/form_field"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/user_hint"
                android:textColor="@color/darkOrangeExito" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:minHeight="64dp"
                android:text="@string/password_label"
                android:textAlignment="textEnd"
                android:textColor="@color/redExito"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/form_field"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/darkOrangeExito"
                android:hint="@string/password_hint"
                />
        </LinearLayout>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="20dp"
            android:text="@string/sign_in_label_button"
            android:textColor="@color/redExito"
            app:cornerRadius="0dp"
            app:strokeColor="@color/whiteExito"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/recoverPasswordButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="8dp"
            android:text="@string/recovery_account_label_button"
            android:textColor="@color/darkOrangeExito"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signInButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="8dp"
            android:text="@string/sign_in_label_button"
            android:textColor="@color/redExito" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>